deployment-be.yaml
apiVersion: v1
kind: Service
metadata:
  name: back
  labels:
    app: dtester
spec:
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  selector:
    app: dtester
    tier: backend
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: back
  labels:
    app: dtester
spec:
  replicas: 3
  selector:
    matchLabels:
      app: dtester
      tier: backend
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: dtester
        tier: backend
    spec:
      containers:
      - image: avvppro/dt-back:latest
        name: dt-back
        ports:
        - containerPort: 80
          name: dtester
        readinessProbe:
          httpGet:
            path: /dtapi/
            port: 80
        livenessProbe:
          httpGet:
            path: /dtapi/
            port: 80
          initialDelaySeconds: 3
          periodSeconds: 3
