deployment-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: data
  labels:
    app: dtester
    tier: database
spec:
  type: LoadBalancer
  ports:
  - port: 3306
    targetPort: 3306
  selector:
    app: dtester
    tier: database
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: data
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dtester
      tier: database
  template:
    metadata:
      labels:
        app: dtester
        tier: database
    spec:
      containers:
      - name: dt-data
        image: mysql:5.7.31
        ports:
        - containerPort: 3306
