deployment-fe.yaml
apiVersion: v1
kind: Service
metadata:
  name: front
  labels:
    app: dtester
    tier: frontend
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: dtester
    tier: frontend
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: front
  namespace: default
spec:
  replicas: 3
  selector:
    matchLabels:
      app: dtester
      tier: frontend
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: dtester
        tier: frontend
    spec:
      containers:
      - name: dt-front
        image: avvppro/dt-front:latest
        ports:
        - containerPort: 80
        livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 3
            periodSeconds: 3
