ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: dtester
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "dtester"
spec:
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: front
          servicePort: 80
      - path: /dtapi/*
        backend:
          serviceName: back
          servicePort: 80
